
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_short ;
struct in_addr {int dummy; } ;
struct sockaddr_in {int sin_port; int sin_family; struct in_addr sin_addr; } ;
struct sockaddr {int dummy; } ;
struct hostent {scalar_t__ h_addr; } ;
typedef int sin ;


 int AF_INET ;
 int EXIT_FAILURE ;
 int IPPROTO_TCP ;
 int SOCK_STREAM ;
 scalar_t__ connect (int,struct sockaddr*,int) ;
 int exit (int ) ;
 struct hostent* gethostbyname (char*) ;
 int htons (int ) ;
 int perror (char*) ;
 int printf (char*,...) ;
 int socket (int ,int ,int ) ;

int
connect_to(char *host, unsigned int port)
{
 struct hostent *h;
 struct sockaddr_in sin;
 int sock;

 if((h=gethostbyname(host))==((void*)0))
 {
  printf("- Error: Unable to resolve %s\n",host);
  exit(EXIT_FAILURE);
 }
 printf("+ Resolved %s\n",host);
 sin.sin_addr=*((struct in_addr *)h->h_addr);
 sin.sin_family=AF_INET;
 sin.sin_port=htons((u_short)port);
 if((sock=socket(AF_INET,SOCK_STREAM,IPPROTO_TCP))<0)
 {
  perror("socket");exit(EXIT_FAILURE);
 }
 if(connect(sock,(struct sockaddr*)&sin,sizeof(sin))<0)
 {
  perror("connect");exit(EXIT_FAILURE);
 }
 printf("+ Connected\n");
 return sock;
}
